# ToolDAQFramework

./: .gitignore  CMakeLists.txt  README.md
bindings/: CMakeLists.txt  README.md
bindings/python/: binding.cpp
cmake/: toolchain-aarch64-linux-gnu.cmake
examples/python/: Example.py
src/DAQInterface/: DAQInterface.cpp
src/ServiceDiscovery/: ServicesBackend.cpp
src/Store/: SerialisableObject.h
